--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div>
                 <i class="fa-solid fa-shield-halved"></i>
                 <h2>Web Design</h2>
-                <p>Fascinated by the power of Artificial Intelligence and Machine Learning, I am constantly exploring ways to infuse intelligence into technology</p>
+                <p>Fascinated by Power of Artificial Intelligence and Machine Learning, I am constantly exploring ways to infuse intelligence into technology</p>
                 <a href="#">Learn more</a>
             </div>
             <div>
@@ -163,8 +163,8 @@
     <div class="container">
         <div class="row">
             <div class="contact-left">
-                <h1 class="sub-title">Contact Me</h1>
-                <p> <i class="fa-sharp fa-solid fa-paper-plane"></i>  ap.9516642814@gmail.com </p>
+                <h1 class="sub-title">Contact Us</h1>
+                <p> <i class="fa-sharp fa-solid fa-paper-plane"></i>  rampatel951664@gmail.com </p>
                 <p><i class="fa-sharp fa-solid fa-phone-volume"></i> 9516642814</p>
                 <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
@@ -172,7 +172,7 @@
                 <a href="#"><i class="fa-brands fa-linkedin"></i></i></a>
                 </div> 
 
-                <a href="images/AMAN  CV.pdf" download class ="btn btn2">Download CV</a>
+                <a href="images/AMAN  CV.pdf" download class ="btn btn2">Download  My CV</a>
             </div>
             <div class="contact-right">
                 <form>
@@ -218,4 +218,5 @@
 </script>
 
 </body>
+
 </html>
